log.txt
IRandom.java:27: error: class, interface, or enum expected
}
^
1 error
